# netcalc

./: .gitignore  0.bootstrap.js  Cargo.toml  LICENSE  Makefile  bootstrap.js  index.html  index.js  netcalc.d.ts  netcalc.js  netcalc_bg.js  netcalc_bg.wasm  package.json  release.sh
.github/workflows/: gh-pages.yml
gh-pages/.github/workflows/: gh-pages.yml
src/: bin.rs  lib.rs  utils.rs
src/netcalc/: alg.rs  mod.rs
www/: index.html  index.js  package-lock.json  package.json
