[package]
name = "netcalc"
version = "0.1.0"
authors = ["Shou Ya <shouya@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6" }
wee_alloc = { version = "0.4.5" }
failure = "0.1.8"
itertools = { version = "0.11.0", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
